--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body * {
 #search input {
     padding: 10px;
     width: 100%;
+    border: 2px solid #ccc;
 }
 #car_list {
     list-style: none;
@@ -130,7 +131,11 @@ body * {
 }
 
 /* Race track */
+#race {
+    padding-top: 20px;
+}
 #race_track {
+    position: relative;
     overflow: hidden;
     border: 2px solid #ccc;
 }
@@ -147,4 +152,26 @@ body * {
     border: 2px solid #ccc;
     width: 70px;
     height: 100%;
+}
+#race_markers {
+    position: absolute;
+    z-index: 9;
+}
+.distMarker {
+    top: 0;
+    height: 150px;
+    position: absolute;
+}
+.distMarker p {
+    position: absolute;
+    top: -20px;
+    margin: 0;
+    margin-left: -12px;
+}
+.distMarker span {
+    display: block;
+    width: 1px;
+    height: 100%;
+    opacity: 0.2;
+    background-color: #ccc;
 }
