--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,39 @@ body * {
     opacity: 0.2;
     background-color: #ccc;
 }
+#race_events {
+    position: relative;
+    z-index: 11;
+}
+.speed_limit {
+    top: 0;
+    height: 150px;
+    position: absolute;
+}
+.speed_limit span {
+    display: block;
+    width: 1px;
+    height: 100%;
+    border-left: 4px dashed #ccc;
+    margin-left: -2px;
+    opacity: 0.5;
+}
+.speed_limit p {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+
+    font-size: 26px;
+    line-height: 44px;
+
+    bottom: -60px;
+    margin: 0;
+    margin-left: -24px;
+
+    text-align: center;
+
+    border: 4px solid #ccc;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
